S5_L44.c: added bg-video; lowered opacity of stories, bg-video; solved for overflow

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -121,6 +121,19 @@ body {
 .u-mt-small {
   margin-bottom: 1.5rem; }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -326,7 +339,7 @@ body {
     font-weight: 100; }
 
 .story {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 3px;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
   font-size: 1.6rem;
@@ -346,7 +359,8 @@ body {
     clip-path: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
-    position: relative; }
+    position: relative;
+    overflow: hidden; }
   .story__img {
     height: 100%;
     transform: translateX(-4rem) scale(1.2);
@@ -441,10 +455,10 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 5rem 0;
+  padding: 25rem 0 1.5rem 0;
   margin-bottom: -10rem;
   margin-top: -20vh; }
 
 .section-stories {
-  padding: 15rem 0;
-  background-color: #f7f7f7; }
+  position: relative;
+  padding: 15rem 0; }
