--- a/Natours/starter/sass/components/_story.scss
+++ b/Natours/starter/sass/components/_story.scss
@@ -1,5 +1,5 @@
 .story {
-  background-color: $color-white;
+  background-color: rgba($color-white, .6);
   border-radius: 3px;
   box-shadow: 0 3rem 6rem rgba($color-black, .1);
   font-size: $def-font-size;
@@ -25,6 +25,7 @@
     -webkit-clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    overflow: hidden;
   }
 
   &__img {
