--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -22,12 +22,12 @@
 
 .section-tours {
 	background-color: $color-grey-light-1;
-	padding: 25rem 0 5rem 0;
+	padding: 25rem 0 1.5rem 0;
 	margin-bottom: -10rem;
   margin-top: -20vh;
 }
 
 .section-stories {
+  position: relative;
   padding: 15rem 0;
-  background-color: $color-grey-light-1;
 }
